2012-12-23  Araki Ken  <arakiken@users.sf.net>

	* ml_vt100_parser.c: {save|restore}_cursor() aren't called in
	  CSI ? 1047 h and CSI ? 1047 l.

2012-12-22  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: if(read() > 0) -> while(read() > 0)

	* x_screen.c: Memory leak in x_set_button3_behavior() is fixed.

2012-12-21  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: execv() -> execvp() in open_button3_command().

	* kik_args.c: kik_arg_str_to_array() parsed "\ " as a normal space
	  character not as an argument separator.

	* man/mlterm.1, README.ja: Updated.

2012-12-20  Araki Ken  <arakiken@users.sf.net>

	* x_im_candidate_screen.c, x_im_status_screen.c:
	  Compilation error is fixed.

2012-12-19  Araki Ken  <arakiken@users.sf.net>

	* configure.in, mlterm/Makefile.in, xwindow/Makefile.in,
	  ml_config_menu.[ch], xlib/x_imagelib.c:
	  --disable-use-tools option is added to configure.

2012-12-18  Araki Ken  <arakiken@users.sf.net>

	* x_draw_string.c:
	  "xfont->is_proportional && ! xfont->is_var_col_width" is replaced by
	  draw_alone of x_calculate_char_width().

	* xlib/x_font.c:
	  Whether the width of U+2580 - U+259f whose width is ambiguous
	  is the same as font->width or not is checked explicitly, because
	  their glyphs of some fonts (e.g. GNU Unifont) are full width.

	* x_font.h, fb/x_font.c, win32/x_font.c, xlib/x_font.c, x_screen.c:
	  draw_alone argument is added to x_calculate_char_width().

	* etc/main, etc/main.ja: Updated.

2012-12-16  Araki Ken  <arakiken@users.sf.net>

	* xlib/x_display.c:
	  #include <windows.h> is placed before Xlib.h is included in order to
	  avoid compilation error in cygwin/X.

	* x_screen.c, win32/x_window.c:
	  UTF8 text is supported for setting the window title by OSC 0 or OSC 2
	  in win32.

	* mlcc/comm.c:
	  - Wait the next bytes until 0.01 second elapse in read_one().
	    ("\x1bOA" is separated to "\x1b", "O" and "A" without this in cygwin.)
	  - The way of determining KEY_BS and KEY_DEL is fixed.